--- a/index.html
+++ b/index.html
@@ -121,11 +121,15 @@
           </div>
         </div>
       </div>
+      <footer class="footer">
+        <p>Gestión de Entrenamientos - Elena Bragado Romeo <span id="currentYear"></span> &copy;</p>
+      </footer>
     </div>
   </main>
 
   <script src="clases.js"></script>
   <script src="script.js"></script>
+  <script>document.getElementById('currentYear').textContent = new Date().getFullYear();</script>
 </body>
 
 </html>
