--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
 
   <script src="clases.js"></script>
   <script src="script.js"></script>
-  <script>document.getElementById('currentYear').textContent = new Date().getFullYear();</script>
+  <script>window.addEventListener('DOMContentLoaded', function() {
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
+  });</script>
 </body>
+
 
 </html>
